--- a/index.html
+++ b/index.html
@@ -8,35 +8,36 @@
     <link rel="styles.css">
 </head>
 <body>
-    /*1st Section and Navbar*/
+    <!--1st Section and Navbar !-->
 
     <div class="container-1">
     <nav class="magic navbar">
-/*consider adding a nav logo here*/ 
+<!--consider adding a nav logo here !--> 
     <div class="header-links">
         <a href="#">About</a>
         <a href="#">Team</a>
         <a href="#">Contact</a>
     </div>
  </nav>
-    /*2nd Section "Hero"*/
+
+ <!-- 2nd Section "Hero" !-->
 <div class="container-2">
     <div class="magic-hero-1">
         <h1>This is a Magic Landing Page</h1>
         <p>Magic is defined as an extraordinary power or influence seemingly from a supernatural source.</p>
         <button class="magic-hero-button-1">Sign up here!</button>
     </div>
-    /* consider adding an image here */
+    <!-- consider adding a "main" image here --> 
     <div class="magic-hero image-z">
-       <img src="images/zatanna.jpeg" alt="zatanna">
+       <img src="/images/zatanna.jpeg" alt="zatanna">
     </div>
 </div>
 
-/*3rd section "Content"*/
+<!-- 3rd section "Content" -->
 <div class="magic content">
     <h2>Premiere Magicians</h2>
     <div class="content-info">
-        /* create 3 divs to showcase each magician */
+        <!-- create 3 divs to showcase each magician -->
     <div>
         <img src="/images/black chaos mage .webp">
         <p>Magician of Black Chaos</p>
@@ -47,11 +48,29 @@
     </div>
     <div>
         <img src="/images/sixpathssagenaurto.png">
-        <p>Uzamaki Naruto,the 7th Hokage</p>
+        <p>Uzamaki Naruto, the 7th Hokage</p>
     </div>   
     </div>
 </div>
-
+<!-- 4th section "Quote"-->
+<div class="magic quote">
+   <p>"Magic is just science that has yet to be understood. And there is great magic in understanding."</p> 
+   <b>
+    -- ASTROMAGIC
+   </b>
+</div>
+<div class="magic sign-up">
+    <div class="sign-item signs text">
+        <h3>Stay up to date on the magic!</h3>
+        <p>Sign up for the latest information!</p>
+    </div>
+    <div class="sign-item signs-button">
+        <button type="button">Sign up</button>
+    </div>
+</div>
+<div class="magic footer">
+    <p>Copyright © The Odin Project 2023</p>
+</div>
  </div>   
 </body>
 </html>
