made small changes to html, added more css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic Landing Page</title>
-    <link rel="styles.css">
 </head>
+<link rel="stylesheet" href="styles.css"/>
 <body>
     <!--1st Section and Navbar !-->
 
     <div class="container-1">
-    <nav class="magic navbar">
+    <nav class="magic-navbar">
+        <div class="header-logo">
+            <img src="/images/magic aura.jpeg">
+        </div>
 <!--consider adding a nav logo here !--> 
     <div class="header-links">
         <a href="#">About</a>
@@ -28,7 +31,7 @@
         <button class="magic-hero-button-1">Sign up here!</button>
     </div>
     <!-- consider adding a "main" image here --> 
-    <div class="magic-hero image-z">
+    <div class="magic-hero-z">
        <img src="/images/zatanna.jpeg" alt="zatanna">
     </div>
 </div>
