polished more css in the hero section, changed some html formatting

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-1">
     <nav class="magic-navbar">
         <div class="header-logo">
-            <img src="/images/magic aura.jpeg">
+            <img src="/images/pinkmagicpanther.jpeg">
         </div>
 <!--consider adding a nav logo here !--> 
     <div class="header-links">
@@ -32,7 +32,7 @@
     </div>
     <!-- consider adding a "main" image here --> 
     <div class="magic-hero-z">
-       <img src="/images/zatanna.jpeg" alt="zatanna">
+       <img src="/images/starzatanna.jpeg" alt="zatanna">
     </div>
 </div>
 
