adjusted content info section boxes, needs color and better spacing

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     </div>
     <!-- consider adding a "main" image here --> 
     <div class="magic-hero-z">
-       <img src="/images/starzatanna.jpeg" alt="zatanna">
+       <img src="/images/colorzatanna.jpeg" alt="zatanna">
     </div>
 </div>
 
 <!-- 3rd section "Content" -->
 <div class="magic content">
-    <h2>Premiere Magicians</h2>
+    <h2>PREMIERE MAGES</h2>
     <div class="content-info">
         <!-- create 3 divs to showcase each magician -->
     <div>
@@ -50,9 +50,13 @@
         <p>Mahad, The Dark Magician</p>
     </div>
     <div>
-        <img src="/images/sixpathssagenaurto.png">
-        <p>Uzamaki Naruto, the 7th Hokage</p>
-    </div>   
+        <img src="/images/doomsurfing.jpeg">
+        <p>Viktor Von Doom</p>
+    </div>
+    <div>
+        <img src="/images/zatannav2.jpeg">
+        <p>Zatanna Zatara</p>
+    </div>
     </div>
 </div>
 <!-- 4th section "Quote"-->
