--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <!-- 3rd section "Content" -->
 <div class="magic content">
-    <h2>PREMIERE MAGES</h2>
+    <h2 class ="premiere">PREMIERE MAGICIANS</h2>
     <div class="content-info">
         <!-- create 3 divs to showcase each magician -->
     <div>
@@ -50,23 +50,23 @@
         <p>Mahad, The Dark Magician</p>
     </div>
     <div>
-        <img src="/images/doomsurfing.jpeg">
-        <p>Viktor Von Doom</p>
+        <img src="/images/strangemagic.jpeg">
+        <p>Stephen Strange</p>
     </div>
     <div>
-        <img src="/images/zatannav2.jpeg">
+        <img src="/images/starzatanna.jpeg">
         <p>Zatanna Zatara</p>
     </div>
     </div>
 </div>
 <!-- 4th section "Quote"-->
-<div class="magic quote">
-   <p>"Magic is just science that has yet to be understood. And there is great magic in understanding."</p> 
-   <b>
+<div class="magic-quote">
+   <p class="astroquote">"Magic is just science that has yet to be understood. And there is great magic in understanding."</p> 
+   <p class="astrosigned">
     -- ASTROMAGIC
-   </b>
+   </p>
 </div>
-<div class="magic sign-up">
+<div class="magic-sign-up">
     <div class="sign-item signs text">
         <h3>Stay up to date on the magic!</h3>
         <p>Sign up for the latest information!</p>
@@ -75,7 +75,7 @@
         <button type="button">Sign up</button>
     </div>
 </div>
-<div class="magic footer">
+<div class="magic-footer">
     <p>Copyright © The Odin Project 2023</p>
 </div>
  </div>   
