made addition to html file that should allow images to show

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-1">
     <nav class="magic-navbar">
         <div class="header-logo">
-            <img src="/images/pinkmagicpanther.jpeg">
+            <img src="./images/pinkmagicpanther.jpeg">
         </div>
 <!--consider adding a nav logo here !--> 
     <div class="header-links">
@@ -32,7 +32,7 @@
     </div>
     <!-- consider adding a "main" image here --> 
     <div class="magic-hero-z">
-       <img src="/images/colorzatanna.jpeg" alt="zatanna">
+       <img src="./images/colorzatanna.jpeg" alt="zatanna">
     </div>
 </div>
 
@@ -42,19 +42,19 @@
     <div class="content-info">
         <!-- create 3 divs to showcase each magician -->
     <div>
-        <img src="/images/black chaos mage .webp">
+        <img src="./images/black chaos mage .webp">
         <p>Magician of Black Chaos</p>
     </div>
     <div>
-        <img src="/images/dark magician .jpeg">
+        <img src="./images/dark magician .jpeg">
         <p>Mahad, The Dark Magician</p>
     </div>
     <div>
-        <img src="/images/strangemagic.jpeg">
+        <img src="./images/strangemagic.jpeg">
         <p>Stephen Strange</p>
     </div>
     <div>
-        <img src="/images/starzatanna.jpeg">
+        <img src="./images/starzatanna.jpeg">
         <p>Zatanna Zatara</p>
     </div>
     </div>
